FIX: visible effect about y margin portafolio

--- a/src/sass/about.sass
+++ b/src/sass/about.sass
@@ -119,3 +119,5 @@
 
     .hidden
         visibility: hidden
+    .visible
+        visibility: visible
