--- a/src/sass/portafolio.sass
+++ b/src/sass/portafolio.sass
@@ -22,7 +22,8 @@
             flex-direction: column
             min-width: 150px
             padding: 30px 50px
-            margin-top: 25px
+            margin-bottom: 30px
+            margin-top: 20px
 
 
             .card-flex
